template.json
{
    "$schema": "https://schema.management.azure.com/schemas/2015-01-01/deploymentTemplate.json#",
    "contentVersion": "1.0.0.0",
    "parameters": {
        "virtualMachines_ChefonUbuntu_name": {
            "defaultValue": "ChefonUbuntu",
            "type": "String"
        },
        "networkInterfaces_chefonubuntu814_name": {
            "defaultValue": "chefonubuntu814",
            "type": "String"
        },
        "publicIPAddresses_ChefonUbuntu_ip_name": {
            "defaultValue": "ChefonUbuntu-ip",
            "type": "String"
        },
        "virtualNetworks_ChefonUbuntu_vnet_name": {
            "defaultValue": "ChefonUbuntu-vnet",
            "type": "String"
        },
        "storageAccounts_chefonubuntudiag232_name": {
            "defaultValue": "chefonubuntudiag232",
            "type": "String"
        },
        "networkSecurityGroups_ChefonUbuntu_nsg_name": {
            "defaultValue": "ChefonUbuntu-nsg",
            "type": "String"
        },
        "schedules_shutdown_computevm_chefonubuntu_name": {
            "defaultValue": "shutdown-computevm-chefonubuntu",
            "type": "String"
        },
        "subnets_default_name": {
            "defaultValue": "default",
            "type": "String"
        },
        "securityRules_RDP_name": {
            "defaultValue": "RDP",
            "type": "String"
        },
        "securityRules_default_allow_ssh_name": {
            "defaultValue": "default-allow-ssh",
            "type": "String"
        },
        "virtualMachines_ChefonUbuntu_id": {
            "defaultValue": "/subscriptions/88d6b517-59d6-4362-85fa-1849cf022a87/resourceGroups/ChefonUbuntu/providers/Microsoft.Compute/disks/ChefonUbuntu_OsDisk_1_f5168fcb0dd24376b9da99031f6ff389",
            "type": "String"
        }
    },
    "variables": {},
    "resources": [
        {
            "comments": "Generalized from resource: '/subscriptions/88d6b517-59d6-4362-85fa-1849cf022a87/resourceGroups/ChefonUbuntu/providers/Microsoft.Compute/virtualMachines/ChefonUbuntu'.",
            "type": "Microsoft.Compute/virtualMachines",
            "name": "[parameters('virtualMachines_ChefonUbuntu_name')]",
            "apiVersion": "2017-03-30",
            "location": "SouthIndia",
            "scale": null,
            "properties": {
                "hardwareProfile": {
                    "vmSize": "Standard_D1_v2"
                },
                "storageProfile": {
                    "imageReference": {
                        "publisher": "Canonical",
                        "offer": "UbuntuServer",
                        "sku": "16.04-LTS",
                        "version": "latest"
                    },
                    "osDisk": {
                        "osType": "Linux",
                        "name": "[concat(parameters('virtualMachines_ChefonUbuntu_name'),'_OsDisk_1_f5168fcb0dd24376b9da99031f6ff389')]",
                        "createOption": "FromImage",
                        "caching": "ReadWrite",
                        "managedDisk": {
                            "storageAccountType": "Standard_LRS",
                            "id": "[parameters('virtualMachines_ChefonUbuntu_id')]"
                        },
                        "diskSizeGB": 30
                    },
                    "dataDisks": []
                },
                "osProfile": {
                    "computerName": "[parameters('virtualMachines_ChefonUbuntu_name')]",
                    "adminUsername": "vmadmin",
                    "linuxConfiguration": {
                        "disablePasswordAuthentication": false
                    },
                    "secrets": []
                },
                "networkProfile": {
                    "networkInterfaces": [
                        {
                            "id": "[resourceId('Microsoft.Network/networkInterfaces', parameters('networkInterfaces_chefonubuntu814_name'))]"
                        }
                    ]
                },
                "diagnosticsProfile": {
                    "bootDiagnostics": {
                        "enabled": true,
                        "storageUri": "[concat('https', '://', parameters('storageAccounts_chefonubuntudiag232_name'), '.blob.core.windows.net', '/')]"
                    }
                }
            },
            "dependsOn": [
                "[resourceId('Microsoft.Network/networkInterfaces', parameters('networkInterfaces_chefonubuntu814_name'))]",
                "[resourceId('Microsoft.Storage/storageAccounts', parameters('storageAccounts_chefonubuntudiag232_name'))]"
            ]
        },
        {
            "comments": "Generalized from resource: '/subscriptions/88d6b517-59d6-4362-85fa-1849cf022a87/resourcegroups/chefonubuntu/providers/microsoft.devtestlab/schedules/shutdown-computevm-chefonubuntu'.",
            "type": "microsoft.devtestlab/schedules",
            "name": "[parameters('schedules_shutdown_computevm_chefonubuntu_name')]",
            "apiVersion": "2016-05-15",
            "location": "southindia",
            "scale": null,
            "properties": {
                "status": "Enabled",
                "taskType": "ComputeVmShutdownTask",
                "dailyRecurrence": {
                    "time": "1900"
                },
                "timeZoneId": "UTC",
                "notificationSettings": {
                    "status": "Disabled",
                    "timeInMinutes": 30
                },
                "targetResourceId": "[resourceId('Microsoft.Compute/virtualMachines', parameters('virtualMachines_ChefonUbuntu_name'))]",
                "provisioningState": "Succeeded",
                "uniqueIdentifier": "bd699c31-92cd-45aa-9466-d2b5a8b7bf93"
            },
            "dependsOn": [
                "[resourceId('Microsoft.Compute/virtualMachines', parameters('virtualMachines_ChefonUbuntu_name'))]"
            ]
        },
        {
            "comments": "Generalized from resource: '/subscriptions/88d6b517-59d6-4362-85fa-1849cf022a87/resourceGroups/ChefonUbuntu/providers/Microsoft.Network/networkInterfaces/chefonubuntu814'.",
            "type": "Microsoft.Network/networkInterfaces",
            "name": "[parameters('networkInterfaces_chefonubuntu814_name')]",
            "apiVersion": "2017-06-01",
            "location": "southindia",
            "scale": null,
            "properties": {
                "provisioningState": "Succeeded",
                "resourceGuid": "775e7355-a5be-48f4-bef0-4de3f43069b1",
                "ipConfigurations": [
                    {
                        "name": "ipconfig1",
                        "etag": "W/\"11f92469-5122-45a9-93a6-ef3338d35563\"",
                        "properties": {
                            "provisioningState": "Succeeded",
                            "privateIPAddress": "10.1.3.4",
                            "privateIPAllocationMethod": "Dynamic",
                            "publicIPAddress": {
                                "id": "[resourceId('Microsoft.Network/publicIPAddresses', parameters('publicIPAddresses_ChefonUbuntu_ip_name'))]"
                            },
                            "subnet": {
                                "id": "[resourceId('Microsoft.Network/virtualNetworks/subnets', parameters('virtualNetworks_ChefonUbuntu_vnet_name'), parameters('subnets_default_name'))]"
                            },
                            "primary": true,
                            "privateIPAddressVersion": "IPv4"
                        }
                    }
                ],
                "dnsSettings": {
                    "dnsServers": [],
                    "appliedDnsServers": [],
                    "internalDomainNameSuffix": "azprkwjeg5mudfw1lvclaw1cid.tx.internal.cloudapp.net"
                },
                "macAddress": "00-0D-3A-F2-15-BE",
                "enableAcceleratedNetworking": false,
                "enableIPForwarding": false,
                "networkSecurityGroup": {
                    "id": "[resourceId('Microsoft.Network/networkSecurityGroups', parameters('networkSecurityGroups_ChefonUbuntu_nsg_name'))]"
                },
                "primary": true,
                "virtualMachine": {
                    "id": "[resourceId('Microsoft.Compute/virtualMachines', parameters('virtualMachines_ChefonUbuntu_name'))]"
                }
            },
            "dependsOn": [
                "[resourceId('Microsoft.Network/publicIPAddresses', parameters('publicIPAddresses_ChefonUbuntu_ip_name'))]",
                "[resourceId('Microsoft.Network/virtualNetworks/subnets', parameters('virtualNetworks_ChefonUbuntu_vnet_name'), parameters('subnets_default_name'))]",
                "[resourceId('Microsoft.Network/networkSecurityGroups', parameters('networkSecurityGroups_ChefonUbuntu_nsg_name'))]",
                "[resourceId('Microsoft.Compute/virtualMachines', parameters('virtualMachines_ChefonUbuntu_name'))]"
            ]
        },
        {
            "comments": "Generalized from resource: '/subscriptions/88d6b517-59d6-4362-85fa-1849cf022a87/resourceGroups/ChefonUbuntu/providers/Microsoft.Network/networkSecurityGroups/ChefonUbuntu-nsg'.",
            "type": "Microsoft.Network/networkSecurityGroups",
            "name": "[parameters('networkSecurityGroups_ChefonUbuntu_nsg_name')]",
            "apiVersion": "2017-06-01",
            "location": "southindia",
            "scale": null,
            "properties": {
                "provisioningState": "Succeeded",
                "resourceGuid": "75cdc42e-a88e-4b8e-bd96-b17f92046707",
                "securityRules": [
                    {
                        "name": "default-allow-ssh",
                        "etag": "W/\"20b6b77f-0f1d-4805-bafd-9c0729cedadf\"",
                        "properties": {
                            "provisioningState": "Succeeded",
                            "protocol": "TCP",
                            "sourcePortRange": "*",
                            "destinationPortRange": "22",
                            "sourceAddressPrefix": "*",
                            "destinationAddressPrefix": "*",
                            "access": "Allow",
                            "priority": 1000,
                            "direction": "Inbound",
                            "sourceAddressPrefixes": [],
                            "destinationAddressPrefixes": []
                        }
                    },
                    {
                        "name": "RDP",
                        "etag": "W/\"20b6b77f-0f1d-4805-bafd-9c0729cedadf\"",
                        "properties": {
                            "provisioningState": "Succeeded",
                            "protocol": "TCP",
                            "sourcePortRange": "*",
                            "destinationPortRange": "3389",
                            "sourceAddressPrefix": "*",
                            "destinationAddressPrefix": "*",
                            "access": "Allow",
                            "priority": 1010,
                            "direction": "Inbound",
                            "sourceAddressPrefixes": [],
                            "destinationAddressPrefixes": []
                        }
                    }
                ],
                "defaultSecurityRules": [
                    {
                        "name": "AllowVnetInBound",
                        "etag": "W/\"20b6b77f-0f1d-4805-bafd-9c0729cedadf\"",
                        "properties": {
                            "provisioningState": "Succeeded",
                            "description": "Allow inbound traffic from all VMs in VNET",
                            "protocol": "*",
                            "sourcePortRange": "*",
                            "destinationPortRange": "*",
                            "sourceAddressPrefix": "VirtualNetwork",
                            "destinationAddressPrefix": "VirtualNetwork",
                            "access": "Allow",
                            "priority": 65000,
                            "direction": "Inbound",
                            "sourceAddressPrefixes": [],
                            "destinationAddressPrefixes": []
                        }
                    },
                    {
                        "name": "AllowAzureLoadBalancerInBound",
                        "etag": "W/\"20b6b77f-0f1d-4805-bafd-9c0729cedadf\"",
                        "properties": {
                            "provisioningState": "Succeeded",
                            "description": "Allow inbound traffic from azure load balancer",
                            "protocol": "*",
                            "sourcePortRange": "*",
                            "destinationPortRange": "*",
                            "sourceAddressPrefix": "AzureLoadBalancer",
                            "destinationAddressPrefix": "*",
                            "access": "Allow",
                            "priority": 65001,
                            "direction": "Inbound",
                            "sourceAddressPrefixes": [],
                            "destinationAddressPrefixes": []
                        }
                    },
                    {
                        "name": "DenyAllInBound",
                        "etag": "W/\"20b6b77f-0f1d-4805-bafd-9c0729cedadf\"",
                        "properties": {
                            "provisioningState": "Succeeded",
                            "description": "Deny all inbound traffic",
                            "protocol": "*",
                            "sourcePortRange": "*",
                            "destinationPortRange": "*",
                            "sourceAddressPrefix": "*",
                            "destinationAddressPrefix": "*",
                            "access": "Deny",
                            "priority": 65500,
                            "direction": "Inbound",
                            "sourceAddressPrefixes": [],
                            "destinationAddressPrefixes": []
                        }
                    },
                    {
                        "name": "AllowVnetOutBound",
                        "etag": "W/\"20b6b77f-0f1d-4805-bafd-9c0729cedadf\"",
                        "properties": {
                            "provisioningState": "Succeeded",
                            "description": "Allow outbound traffic from all VMs to all VMs in VNET",
                            "protocol": "*",
                            "sourcePortRange": "*",
                            "destinationPortRange": "*",
                            "sourceAddressPrefix": "VirtualNetwork",
                            "destinationAddressPrefix": "VirtualNetwork",
                            "access": "Allow",
                            "priority": 65000,
                            "direction": "Outbound",
                            "sourceAddressPrefixes": [],
                            "destinationAddressPrefixes": []
                        }
                    },
                    {
                        "name": "AllowInternetOutBound",
                        "etag": "W/\"20b6b77f-0f1d-4805-bafd-9c0729cedadf\"",
                        "properties": {
                            "provisioningState": "Succeeded",
                            "description": "Allow outbound traffic from all VMs to Internet",
                            "protocol": "*",
                            "sourcePortRange": "*",
                            "destinationPortRange": "*",
                            "sourceAddressPrefix": "*",
                            "destinationAddressPrefix": "Internet",
                            "access": "Allow",
                            "priority": 65001,
                            "direction": "Outbound",
                            "sourceAddressPrefixes": [],
                            "destinationAddressPrefixes": []
                        }
                    },
                    {
                        "name": "DenyAllOutBound",
                        "etag": "W/\"20b6b77f-0f1d-4805-bafd-9c0729cedadf\"",
                        "properties": {
                            "provisioningState": "Succeeded",
                            "description": "Deny all outbound traffic",
                            "protocol": "*",
                            "sourcePortRange": "*",
                            "destinationPortRange": "*",
                            "sourceAddressPrefix": "*",
                            "destinationAddressPrefix": "*",
                            "access": "Deny",
                            "priority": 65500,
                            "direction": "Outbound",
                            "sourceAddressPrefixes": [],
                            "destinationAddressPrefixes": []
                        }
                    }
                ]
            },
            "dependsOn": []
        },
        {
            "comments": "Generalized from resource: '/subscriptions/88d6b517-59d6-4362-85fa-1849cf022a87/resourceGroups/ChefonUbuntu/providers/Microsoft.Network/publicIPAddresses/ChefonUbuntu-ip'.",
            "type": "Microsoft.Network/publicIPAddresses",
            "name": "[parameters('publicIPAddresses_ChefonUbuntu_ip_name')]",
            "apiVersion": "2017-06-01",
            "location": "southindia",
            "scale": null,
            "properties": {
                "provisioningState": "Succeeded",
                "resourceGuid": "fb8c4b72-7740-46ef-89b8-cae108ae6d76",
                "ipAddress": "13.71.123.80",
                "publicIPAddressVersion": "IPv4",
                "publicIPAllocationMethod": "Dynamic",
                "idleTimeoutInMinutes": 4,
                "dnsSettings": {
                    "domainNameLabel": "chef",
                    "fqdn": "chef.southindia.cloudapp.azure.com"
                }
            },
            "dependsOn": []
        },
        {
            "comments": "Generalized from resource: '/subscriptions/88d6b517-59d6-4362-85fa-1849cf022a87/resourceGroups/ChefonUbuntu/providers/Microsoft.Network/virtualNetworks/ChefonUbuntu-vnet'.",
            "type": "Microsoft.Network/virtualNetworks",
            "name": "[parameters('virtualNetworks_ChefonUbuntu_vnet_name')]",
            "apiVersion": "2017-06-01",
            "location": "southindia",
            "scale": null,
            "properties": {
                "provisioningState": "Succeeded",
                "resourceGuid": "59155f06-3724-41d9-96db-5d44b05b6243",
                "addressSpace": {
                    "addressPrefixes": [
                        "10.1.3.0/24"
                    ]
                },
                "subnets": [
                    {
                        "name": "default",
                        "etag": "W/\"f53095b2-6f47-4ef0-87c5-fe47ee307f66\"",
                        "properties": {
                            "provisioningState": "Succeeded",
                            "addressPrefix": "10.1.3.0/24"
                        }
                    }
                ],
                "virtualNetworkPeerings": []
            },
            "dependsOn": []
        },
        {
            "comments": "Generalized from resource: '/subscriptions/88d6b517-59d6-4362-85fa-1849cf022a87/resourceGroups/chefonubuntu/providers/Microsoft.Storage/storageAccounts/chefonubuntudiag232'.",
            "type": "Microsoft.Storage/storageAccounts",
            "sku": {
                "name": "Standard_LRS",
                "tier": "Standard"
            },
            "kind": "Storage",
            "name": "[parameters('storageAccounts_chefonubuntudiag232_name')]",
            "apiVersion": "2017-06-01",
            "location": "southindia",
            "tags": {},
            "scale": null,
            "properties": {
                "encryption": {
                    "keySource": "Microsoft.Storage",
                    "services": {
                        "blob": {
                            "enabled": true
                        },
                        "file": {
                            "enabled": true
                        }
                    }
                },
                "networkAcls": {
                    "bypass": "AzureServices",
                    "defaultAction": "Allow",
                    "ipRules": [],
                    "virtualNetworkRules": []
                },
                "supportsHttpsTrafficOnly": false
            },
            "dependsOn": []
        },
        {
            "comments": "Generalized from resource: '/subscriptions/88d6b517-59d6-4362-85fa-1849cf022a87/resourceGroups/ChefonUbuntu/providers/Microsoft.Network/networkSecurityGroups/ChefonUbuntu-nsg/securityRules/default-allow-ssh'.",
            "type": "Microsoft.Network/networkSecurityGroups/securityRules",
            "name": "[concat(parameters('networkSecurityGroups_ChefonUbuntu_nsg_name'), '/', parameters('securityRules_default_allow_ssh_name'))]",
            "apiVersion": "2017-06-01",
            "scale": null,
            "properties": {
                "provisioningState": "Succeeded",
                "protocol": "TCP",
                "sourcePortRange": "*",
                "destinationPortRange": "22",
                "sourceAddressPrefix": "*",
                "destinationAddressPrefix": "*",
                "access": "Allow",
                "priority": 1000,
                "direction": "Inbound",
                "sourceAddressPrefixes": [],
                "destinationAddressPrefixes": []
            },
            "dependsOn": [
                "[resourceId('Microsoft.Network/networkSecurityGroups', parameters('networkSecurityGroups_ChefonUbuntu_nsg_name'))]"
            ]
        },
        {
            "comments": "Generalized from resource: '/subscriptions/88d6b517-59d6-4362-85fa-1849cf022a87/resourceGroups/ChefonUbuntu/providers/Microsoft.Network/networkSecurityGroups/ChefonUbuntu-nsg/securityRules/RDP'.",
            "type": "Microsoft.Network/networkSecurityGroups/securityRules",
            "name": "[concat(parameters('networkSecurityGroups_ChefonUbuntu_nsg_name'), '/', parameters('securityRules_RDP_name'))]",
            "apiVersion": "2017-06-01",
            "scale": null,
            "properties": {
                "provisioningState": "Succeeded",
                "protocol": "TCP",
                "sourcePortRange": "*",
                "destinationPortRange": "3389",
                "sourceAddressPrefix": "*",
                "destinationAddressPrefix": "*",
                "access": "Allow",
                "priority": 1010,
                "direction": "Inbound",
                "sourceAddressPrefixes": [],
                "destinationAddressPrefixes": []
            },
            "dependsOn": [
                "[resourceId('Microsoft.Network/networkSecurityGroups', parameters('networkSecurityGroups_ChefonUbuntu_nsg_name'))]"
            ]
        },
        {
            "comments": "Generalized from resource: '/subscriptions/88d6b517-59d6-4362-85fa-1849cf022a87/resourceGroups/ChefonUbuntu/providers/Microsoft.Network/virtualNetworks/ChefonUbuntu-vnet/subnets/default'.",
            "type": "Microsoft.Network/virtualNetworks/subnets",
            "name": "[concat(parameters('virtualNetworks_ChefonUbuntu_vnet_name'), '/', parameters('subnets_default_name'))]",
            "apiVersion": "2017-06-01",
            "scale": null,
            "properties": {
                "provisioningState": "Succeeded",
                "addressPrefix": "10.1.3.0/24"
            },
            "dependsOn": [
                "[resourceId('Microsoft.Network/virtualNetworks', parameters('virtualNetworks_ChefonUbuntu_vnet_name'))]"
            ]
        }
    ]
}
